--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,9 @@
       content=""
     />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
- 
+   <meta property="twitter:image" content="Twitter link preview image URL"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta property="description" content="hackjack is software development company . it's developed by hackjack group.the founder and CEO of hackjack is Mr.Kiran Ugale (Bca)" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
